# CMake-Modules-Examples

./: README.md
two_libraries/: CMakeLists.txt  a.cppm  b.cppm
two_static_libraries/: CMakeLists.txt  a.cppm  b.cppm  main.cpp
